package network;

public interface ClientHandler {
}
