package pattern;

public interface Observer {
    public void update(String command);
}
